--- a/AngularSPA/ClientApp/src/app/video/video.component.html
+++ b/AngularSPA/ClientApp/src/app/video/video.component.html
@@ -1,7 +1,7 @@
-<h1 id="tableLabel">Histórico de Busca de Canais do YouTube</h1>
+<h1 id="tableLabel">Histórico de Busca de Vídeos do YouTube</h1>
 
 <div class="input-group mb-3">
-  <input type="text" class="form-control" [(ngModel)]="searchQuery" placeholder="Digite o nome do canal que deseja procurar" aria-label="Digite o vídeo ou canal que deseja procurar" aria-describedby="basic-addon2">
+  <input type="text" class="form-control" [(ngModel)]="searchQuery" placeholder="Digite o nome do canal que deseja procurar" aria-label="Digite o vídeo que deseja procurar" aria-describedby="basic-addon2">
   <div class="input-group-append">
     <button class="btn btn-outline-secondary" (click)="startSearch()" type="button">Pesquisar</button>
   </div>
@@ -10,7 +10,7 @@
   <div class="col-sm-2">
     <div class="form-group">
       <label for="optPageSize">Resultados por Página</label>
-      <select class="form-control" id="optPageSize" [(ngModel)]="pageSize">
+      <select class="form-control" id="optPageSize" [(ngModel)]="pageSize" (onChange)="startSearch()">
         <option>5</option>
         <option>10</option>
         <option>20</option>
@@ -38,9 +38,23 @@
         <img class="card-img-bottom" [src]="item.imagem" alt="Card image cap">
       </div>
       <div style="width: 60%; margin: 0 auto; text-align: left">
-        <h5 class="card-title">CANAL: {{ item.title }}</h5>
+        <h5 class="card-title">Vídeo: {{ item.title }}</h5>
         <p class="card-text">{{ item.descricao }}</p>
-        <p class="card-text"><small class="text-muted">Criado em: {{ item.publicadoEm | date: 'dd/MM/yyyy hh:mm' }}</small></p>
+        <p class="card-text"><small class="text-muted">Publicado em: {{ item.publicadoEm | date: 'dd/MM/yyyy hh:mm' }}</small></p>
+        <div class="row">
+            <div class="col-sm-3">
+              <i style='font-size:24px' class='far'>&#xf086; {{quantidadeComentario}}</i>
+            </div>
+            <div class="col-sm-3">
+              <i style='font-size:24px' class='far'>&#xf164; {{quantidadeLike}}</i>
+            </div>
+            <div class="col-sm-3">
+              <i style='font-size:24px' class='far'>&#xf165; {{quantidadeDeslike}}</i>
+            </div>
+            <div class="col-sm-3">
+              <i style='font-size:24px' class='far'>&#xf144; {{quantidadeVisualizacao}}</i>
+            </div>
+        </div>
         <button type="button" class="btn btn-outline-secondary" style="margin-top:5px" (click)="gotoDetails(item)">Detalhes</button>
       </div>
     </div>
