--- a/AngularSPA/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/AngularSPA/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -28,8 +28,11 @@
           <li class="nav-item" [routerLinkActive]="['link-active']">
             <a class="nav-link text-dark" [routerLink]="['/youtube-search']">YouTube</a>
           </li>
-          <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/canal']">Canais</a>
+          <li class="nav-item  navbar-light" [routerLinkActive]="['link-active']">
+            <a class="nav-link text-dark" [routerLink]="['/video']">Histórico de Vídeos</a>
+          </li>
+          <li class="nav-item navbar-light" [routerLinkActive]="['link-active']">
+            <a class="nav-link text-dark" [routerLink]="['/canal']">Histórico de Canais</a>
           </li>
         </ul>
       </div>
